# pyMoM3d

./: .gitignore  CLAUDE.md  CONVENTIONS.md  README.md  build_cpp.py  pyproject.toml  requirements.txt
docs/: api-reference.md  architecture.md  examples-guide.md  getting-started.md
docs/tutorial/: examples-guide.md  getting-started.md
examples/: aefie_spiral_validation.py  backend_comparison.py  cma_plate_example.py  cma_sphere_validation.py  cpw_z0_validation.py  cube_example.py  cylinder_example.py  dipole_array.py  dipole_impedance_sweep.py  finite_width_port_validation.py  friis_validation.py  half_rwg_port_validation.py  hybrid_probe_benchmark.py  impedance_matrix_viz.py  inductor_characterization_demo.py  microstrip_coupled_soc_validation.py  microstrip_hybrid_probe.py  microstrip_new_port_validation.py  microstrip_probe_visualization.py  microstrip_quasi_static_validation.py  microstrip_sdg_tl_validation.py  microstrip_short_soc_validation.py  microstrip_soc_validation.py  microstrip_step_soc_validation.py  microstrip_stub_soc_validation.py  microstrip_y11_extraction.py  microstrip_z0_2port_validation.py  microstrip_z0_probe_validation.py  microstrip_z0_validation.py  network_extraction_demo.py  patch_antenna_validation.py  peec_spiral_validation.py  peec_vs_mom_inductor.py  phantom_layer_validation.py  plate_mesh_example.py  plate_scattering.py  port_calibration_validation.py  pyramid_example.py  qs_diag.py  qs_edge_debug.py  (+20 more)
examples/_archive/: _debug_backend_comparison.py  _debug_capacitance_ratio.py  _debug_capacitance_ratio_v2.py  _debug_current_phase_extraction.py  _debug_current_propagation.py  _debug_dual_length_resonance.py  _debug_dual_stub_extraction.py  _debug_empymod_solve.py  _debug_feedline_cal_synthetic.py  _debug_gf_compare.py  _debug_hybrid.py  _debug_probe_feed_z0.py  _debug_quasi_static_capacitance.py  _debug_resonance_extraction.py  _debug_standing_wave.py  _debug_strata_methods.py  _debug_strata_vs_static_image.py  _debug_y11_aefie.py  _debug_y11_freespace_vs_layered.py  _debug_y11_layer_recursion.py  _debug_y11_mesh_convergence.py  _debug_y11_probe_vertex.py  _debug_y11_single_stub.py  _debug_z_diagonal_comparison.py  _debug_zsrc_sweep.py  _debug_zss_coupling.py  edge_port_debug.py  edge_port_fullwave.py  edge_port_plate_validation.py  edge_port_soc_validation.py  edge_port_visualization.py  groundvia_test.py  microstrip_feedline_cal_validation.py
src/cpp/: CMakeLists.txt  mom_kernel.cpp  singularity.hpp  strata_kernels.cpp
src/pyMoM3d/: __init__.py  simulation.py
src/pyMoM3d/analysis/: __init__.py  cma.py  convergence.py  impedance_analysis.py  inductor.py  inductor_characterization.py  inductor_model.py  mie_series.py  pattern_analysis.py  transmission_line.py
src/pyMoM3d/arrays/: __init__.py  linear_array.py
tests/: test_aefie.py  test_array.py  test_auto_extract.py  test_cfie.py  test_cma.py  test_cross_section.py  test_cross_section_integration.py  test_far_field.py  test_geometry.py  test_gmsh_mesher.py  test_greens.py  test_half_rwg_port.py  test_impedance.py  test_inductor_characterization.py  test_inductor_extraction.py  test_loop_star.py  test_mesh.py  test_mesh_mirror.py  test_mfie.py  test_multilayer.py  test_multilayer_pec.py  test_network.py  test_peec.py  test_port_calibration.py  test_quasi_static.py  test_rwg_basis.py  test_simulation.py  test_soc_deembedding.py  test_solver.py  test_surface_impedance.py  test_tl_deembedding.py  test_tl_extraction.py  test_wire_basis.py  test_wire_kernels.py
(+91 files in other folders)
